--- a/flice-clients/web/src/main/index.html
+++ b/flice-clients/web/src/main/index.html
@@ -23,6 +23,7 @@
     <!--======================-->
     <!-- Application Content  -->
     <!--======================-->
+    <h1>Olar</h1>
     <main id="app-container" ui-view=""></main>
 
 
